--- a/index.html
+++ b/index.html
@@ -1,53 +1,73 @@
 <!DOCTYPE html>
 <html lang="tr">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>1923 Cumhuriyet Konferansı | Samsun Atakum Rotaract </title>
-  <link rel="icon" type="image/x-icon" href="./images/favicon.png">
-  <link rel="stylesheet" href="./index.css">
-  <script src="./geri-sayim.js"></script>
-  <script src="https://kit.fontawesome.com/75a9b9d92e.js" crossorigin="anonymous"></script>
-</head>
-<body>
-  <header>
-    <a href="./index.html" class="logo">
-      <img src="./images/logo.png" alt="Samsun Atakum Rotaract Kulübü">
-    </a>
-    <nav>
-      <a href="./konferans.html">Konferans</a>
-      <a href="./takımlar.html">Takımlar</a>
-      <a href="./otel.html">Otel</a>
-      <a href="./paketler.html">Paketler</a>
-      <a href="./program.html">Program</a>
-    </nav>
-    <a href="./kayitol.html" class="kayit-ol">KAYIT OLUN</a>
-  </header>
-  <main>
-    <section class="geri-sayim">
-      <h2>Konferansa Kalan Süre</h2>
-      <div class="sayac">
-        <div class="gunler"><span>0</span> Gün</div>
-        <div class="saatler"><span>0</span> Saat</div>
-        <div class="dakikalar"><span>0</span> Dakika</div>
-        <div class="saniyeler"><span>0</span> Saniye</div>
-      </div>
-    </section>    
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>1923 Cumhuriyet Konferansı | Samsun Atakum Rotaract</title>
+    <link rel="icon" type="image/x-icon" href="./images/favicon.png" />
+    <link rel="stylesheet" href="./index.css" />
+    <script src="./geri-sayim.js"></script>
+    <script
+      src="https://kit.fontawesome.com/75a9b9d92e.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <header>
+      <a href="./index.html" class="logo">
+        <img src="./images/logo.png" alt="Samsun Atakum Rotaract Kulübü" />
+      </a>
+      <nav>
+        <a href="./konferans.html">Konferans</a>
+        <a href="./takımlar.html">Takımlar</a>
+        <a href="./otel.html">Otel</a>
+        <a href="./paketler.html">Paketler</a>
+        <a href="./program.html">Program</a>
+      </nav>
+      <a href="./kayitol.html" class="kayit-ol">KAYIT OLUN</a>
+    </header>
+    <main>
+      <section class="geri-sayim">
+        <h2>Konferansa Kalan Süre</h2>
+        <div class="sayac">
+          <div class="gunler"><span>0</span> Gün</div>
+          <div class="saatler"><span>0</span> Saat</div>
+          <div class="dakikalar"><span>0</span> Dakika</div>
+          <div class="saniyeler"><span>0</span> Saniye</div>
+        </div>
+      </section>
 
-    <section class="icerik-bolmesi">
-      <img src="./images/kapak.jpg" alt="Başlık Resmi" class="baslik-resmi">
-      <h2 class="baslik">1923 CUMHURİYET KONFERANSI</h2>
-      <p>Samsun Atakum Rotaract Kulübü olarak Cumhuriyetimizin 100. yıl dönümünü ve 35. Rotaract Konferansını bir araya getirerek unutulmaz bir deneyim sunmaya hazırlanıyoruz.</p>
-      <p>1923 Cumhuriyet Konferansı’nda ödül geceleri, takım oyunları, konforlu konaklama ve eğlenceli partiler yer alacak. Hem konferansların bilgilendirici atmosferinden hem de partilerin eğlenceli ortamından yararlanmak isteyen bütün Rotaractör dostlarımızı ve misafirlerimizi konferansa bekliyoruz!</p>
-      <p>Detaylar için websitemizde gezinebilir, sosyal medya hesaplarımızdan iletişime geçebilirsiniz.</p>
-    </section>
-  </main>
-  <footer>
-    <div class="sosyal-medya">
-      <a href="https://www.instagram.com/1923cumhuriyetkonferansi"><i class="fab fa-instagram"></i></a>
-      <a href="mailto:35.konferans@gmail.com"><i class="fa-solid fa-envelope"></i></a>
-    </div>
-    <p class="telif-hakkı">© 2024 Demir Bülbüloğlu - Tüm Hakları Saklıdır.</p>
-  </footer>
-</body>
+      <section class="icerik-bolmesi">
+        <img src="./images/kapak.jpg" alt="Başlık Resmi" class="baslik-resmi" />
+        <h2 class="baslik">1923 CUMHURİYET KONFERANSI</h2>
+        <p>
+          Samsun Atakum Rotaract Kulübü olarak Cumhuriyetimizin 100. yıl
+          dönümünü ve 35. Rotaract Konferansını bir araya getirerek unutulmaz
+          bir deneyim sunmaya hazırlanıyoruz.
+        </p>
+        <p>
+          1923 Cumhuriyet Konferansı’nda ödül geceleri, takım oyunları, konforlu
+          konaklama ve eğlenceli partiler yer alacak. Hem konferansların
+          bilgilendirici atmosferinden hem de partilerin eğlenceli ortamından
+          yararlanmak isteyen bütün Rotaractör dostlarımızı ve misafirlerimizi
+          konferansa bekliyoruz!
+        </p>
+        <p>
+          Detaylar için websitemizde gezinebilir, sosyal medya hesaplarımızdan
+          iletişime geçebilirsiniz.
+        </p>
+      </section>
+    </main>
+    <footer>
+      <div class="sosyal-medya">
+        <a href="https://www.instagram.com/1923cumhuriyetkonferansi"
+          ><i class="fab fa-instagram"></i
+        ></a>
+        <a href="mailto:35.konferans@gmail.com"
+          ><i class="fa-solid fa-envelope"></i
+        ></a>
+      </div>
+      <p class="telif-hakkı">© 2024 Demir Bülbüloğlu - Tüm Hakları Saklıdır.</p>
+    </footer>
+  </body>
 </html>
