--- a/kayitol.html
+++ b/kayitol.html
@@ -1,38 +1,58 @@
 <!DOCTYPE html>
 <html lang="tr">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>1923 Cumhuriyet Konferansı | Samsun Atakum Rotaract</title>
-  <link rel="icon" type="image/x-icon" href="./images/favicon.png">
-  <link rel="stylesheet" href="./kayitol.css">
-  <script src="https://kit.fontawesome.com/75a9b9d92e.js" crossorigin="anonymous"></script>
-</head>
-<body>
-  <header>
-    <div class="logo" onclick="window.location.href = './index.html'">
-      <img src="./images/logo.png">
-    </div>
-    <nav>
-      <a href="./konferans.html">Konferans</a>
-      <a href="./takımlar.html">Takımlar</a>
-      <a href="./otel.html">Otel</a>
-      <a href="./paketler.html">Paketler</a>
-      <a href="./program.html">Program</a>
-    </nav>
-    <a href="./kayitol.html" class="kayit-ol">KAYIT OLUN</a>
-  </header>
-  <main>
-    <section class="onemli-bilgilendirme">
-      <h2>Önemli Bilgilendirme</h2>
-      <p>Kayıt ücretini ödemek için iki seçeneğiniz var:</p>
-      <ul>
-        <li><b>EFT/Havale:</b> Ödemeyi sayfanın altındaki <b>Ödeme Bilgileri</b> bölümünde yazan hesaba yapabilirsiniz.</li>
-        <li><b>Kredi Kartı ile Ödeme:</b> Ödeme Bilgileri bölümünün altında bulunan <b>Kartla Öde</b> butonuna basarak acentenin sitesine yönlendirilirsiniz. Acentenin sitesinde ödemeyi kredi kartınızla gerçekleştirebilir daha sonrasında <b>bankanız aracılığıyla taksitlendirme yapabilirsiniz.</b></li>
-      </ul>
-    </section>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>1923 Cumhuriyet Konferansı | Samsun Atakum Rotaract</title>
+    <link rel="icon" type="image/x-icon" href="./images/favicon.png" />
+    <link rel="stylesheet" href="./kayitol.css" />
+    <script
+      src="https://kit.fontawesome.com/75a9b9d92e.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <header>
+      <div class="logo" onclick="window.location.href = './index.html'">
+        <img src="./images/logo.png" />
+      </div>
+      <nav>
+        <a href="./konferans.html">Konferans</a>
+        <a href="./takımlar.html">Takımlar</a>
+        <a href="./otel.html">Otel</a>
+        <a href="./paketler.html">Paketler</a>
+        <a href="./program.html">Program</a>
+      </nav>
+      <a href="./kayitol.html" class="kayit-ol">KAYIT OLUN</a>
+    </header>
+    <main>
+      <section class="onemli-bilgilendirme">
+        <h2>Önemli Bilgilendirme</h2>
+        <p>Kayıt ücretini ödemek için iki seçeneğiniz var:</p>
+        <ul>
+          <li>
+            <b>EFT/Havale:</b> Ödemeyi sayfanın altındaki
+            <b>Ödeme Bilgileri</b> bölümünde yazan hesaba yapabilirsiniz.
+          </li>
+          <li>
+            <b>Kredi Kartı ile Ödeme:</b> Ödeme Bilgileri bölümünün altında
+            bulunan <b>Kartla Öde</b> butonuna basarak acentenin sitesine
+            yönlendirilirsiniz. Acentenin sitesinde ödemeyi kredi kartınızla
+            gerçekleştirebilir daha sonrasında
+            <b>bankanız aracılığıyla taksitlendirme yapabilirsiniz.</b>
+          </li>
+        </ul>
+      </section>
       <div class="form">
-          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdgAWA_2r4y7w74C-cmTnFPeKQOgtMQAB5nQumeFuIondn7UA/viewform?embedded=true" width="640" height="1120" frameborder="0" marginheight="0" marginwidth="0">Yükleniyor…</iframe>
+        <iframe
+          src="https://docs.google.com/forms/d/e/1FAIpQLSdgAWA_2r4y7w74C-cmTnFPeKQOgtMQAB5nQumeFuIondn7UA/viewform?embedded=true"
+          width="640"
+          height="1120"
+          frameborder="0"
+          marginheight="0"
+          marginwidth="0"
+          >Yükleniyor…</iframe
+        >
       </div>
       <section class="odeme-bilgileri">
         <h2>Ödeme Bilgileri</h2>
@@ -44,14 +64,22 @@
           <p>Açıklama: İsim Soyisim - Kulüp Adı - BAĞIŞ</p>
         </div>
       </section>
-      <a href="https://www.antalyaseminer.com/Rezervasyon/Index/121" class="kartla-ode">KARTLA ÖDE</a>
- </main>
-   <footer>
-    <div class="sosyal-medya">
-      <a href="https://www.instagram.com/1923cumhuriyetkonferansi"><i class="fab fa-instagram"></i></a>
-      <a href="mailto:35.konferans@gmail.com"><i class="fa-solid fa-envelope"></i></a>
-    </div>
-    <p class="telif-hakkı">© 2024 Demir Bülbüloğlu - Tüm Hakları Saklıdır.</p>
-  </footer>
-</body>
+      <a
+        href="https://www.antalyaseminer.com/Rezervasyon/Index/121"
+        class="kartla-ode"
+        >KARTLA ÖDE</a
+      >
+    </main>
+    <footer>
+      <div class="sosyal-medya">
+        <a href="https://www.instagram.com/1923cumhuriyetkonferansi"
+          ><i class="fab fa-instagram"></i
+        ></a>
+        <a href="mailto:35.konferans@gmail.com"
+          ><i class="fa-solid fa-envelope"></i
+        ></a>
+      </div>
+      <p class="telif-hakkı">© 2024 Demir Bülbüloğlu - Tüm Hakları Saklıdır.</p>
+    </footer>
+  </body>
 </html>
