--- a/takımlar.html
+++ b/takımlar.html
@@ -1,38 +1,53 @@
 <!DOCTYPE html>
 <html lang="tr">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>1923 Cumhuriyet Konferansı | Samsun Atakum Rotaract</title>
-  <link rel="icon" type="image/x-icon" href="./images/favicon.png">
-  <link rel="stylesheet" href="./takımlar.css">
-  <script src="https://kit.fontawesome.com/75a9b9d92e.js" crossorigin="anonymous"></script>
-</head>
-<body>
-  <header>
-    <div class="logo" onclick="window.location.href = './index.html'">
-      <img src="./images/logo.png">
-    </div>
-    <nav>
-      <a href="./konferans.html">Konferans</a>
-      <a href="./takımlar.html">Takımlar</a>
-      <a href="./otel.html">Otel</a>
-      <a href="./paketler.html">Paketler</a>
-      <a href="./program.html">Program</a>
-    </nav>
-    <a href="./kayitol.html" class="kayit-ol">KAYIT OLUN</a>
-  </header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>1923 Cumhuriyet Konferansı | Samsun Atakum Rotaract</title>
+    <link rel="icon" type="image/x-icon" href="./images/favicon.png" />
+    <link rel="stylesheet" href="./takımlar.css" />
+    <script
+      src="https://kit.fontawesome.com/75a9b9d92e.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <header>
+      <div class="logo" onclick="window.location.href = './index.html'">
+        <img src="./images/logo.png" />
+      </div>
+      <nav>
+        <a href="./konferans.html">Konferans</a>
+        <a href="./takımlar.html">Takımlar</a>
+        <a href="./otel.html">Otel</a>
+        <a href="./paketler.html">Paketler</a>
+        <a href="./program.html">Program</a>
+      </nav>
+      <a href="./kayitol.html" class="kayit-ol">KAYIT OLUN</a>
+    </header>
     <main>
       <div class="form">
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdovmv9doOU0sdKCB9u7rMH5fNP8_A94NuMYGSx5eLw4WLZiA/viewform?embedded=true" width="640" height="1120" frameborder="0" marginheight="0" marginwidth="0">Yükleniyor…</iframe>
+        <iframe
+          src="https://docs.google.com/forms/d/e/1FAIpQLSdovmv9doOU0sdKCB9u7rMH5fNP8_A94NuMYGSx5eLw4WLZiA/viewform?embedded=true"
+          width="640"
+          height="1120"
+          frameborder="0"
+          marginheight="0"
+          marginwidth="0"
+          >Yükleniyor…</iframe
+        >
       </div>
-   </main>
-   <footer>
-    <div class="sosyal-medya">
-      <a href="https://www.instagram.com/1923cumhuriyetkonferansi"><i class="fab fa-instagram"></i></a>
-      <a href="mailto:35.konferans@gmail.com"><i class="fa-solid fa-envelope"></i></a>
-    </div>
-    <p class="telif-hakkı">© 2024 Demir Bülbüloğlu - Tüm Hakları Saklıdır.</p>
-  </footer>
-</body>
+    </main>
+    <footer>
+      <div class="sosyal-medya">
+        <a href="https://www.instagram.com/1923cumhuriyetkonferansi"
+          ><i class="fab fa-instagram"></i
+        ></a>
+        <a href="mailto:35.konferans@gmail.com"
+          ><i class="fa-solid fa-envelope"></i
+        ></a>
+      </div>
+      <p class="telif-hakkı">© 2024 Demir Bülbüloğlu - Tüm Hakları Saklıdır.</p>
+    </footer>
+  </body>
 </html>
