--- a/paketler.html
+++ b/paketler.html
@@ -1,111 +1,118 @@
 <!DOCTYPE html>
 <html lang="tr">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>1923 Cumhuriyet Konferansı | Samsun Atakum Rotaract</title>
-  <link rel="icon" type="image/x-icon" href="./images/favicon.png">
-  <link rel="stylesheet" href="./paketler.css">
-  <script src="https://kit.fontawesome.com/75a9b9d92e.js" crossorigin="anonymous"></script>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>1923 Cumhuriyet Konferansı | Samsun Atakum Rotaract</title>
+    <link rel="icon" type="image/x-icon" href="./images/favicon.png" />
+    <link rel="stylesheet" href="./paketler.css" />
+    <script
+      src="https://kit.fontawesome.com/75a9b9d92e.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
     <header>
-        <div class="logo" onclick="window.location.href = './index.html'">
-          <img src="./images/logo.png">
-        </div>
-        <nav>
-          <a href="./konferans.html">Konferans</a>
-          <a href="./takımlar.html">Takımlar</a>
-          <a href="./otel.html">Otel</a>
-          <a href="./paketler.html">Paketler</a>
-          <a href="./program.html">Program</a>
-        </nav>
-        <a href="./kayitol.html" class="kayit-ol">KAYIT OLUN</a>
-      </header>
+      <div class="logo" onclick="window.location.href = './index.html'">
+        <img src="./images/logo.png" />
+      </div>
+      <nav>
+        <a href="./konferans.html">Konferans</a>
+        <a href="./takımlar.html">Takımlar</a>
+        <a href="./otel.html">Otel</a>
+        <a href="./paketler.html">Paketler</a>
+        <a href="./program.html">Program</a>
+      </nav>
+      <a href="./kayitol.html" class="kayit-ol">KAYIT OLUN</a>
+    </header>
     <main>
-        <section class="paketlerimiz">
-            <div class="container"> 
-                <h2>Paketlerimiz</h2>
-                <div class="paket-kutulari">
-                    <div class="paket">
-                        <h3>ANKARA PALACE</h3>
-                        <ul>
-                            <li>1 Kişilik Oda</li>
-                            <li>2 Gece</li>
-                        </ul>
-                        <p class="fiyat">Kişi Başı Ücret: 12.475₺ (3.Dalga)</p>
-                    </div>
-                    <div class="paket">
-                        <h3>PERA PALACE</h3>
-                        <ul>
-                            <li>2 Kişilik Oda</li>
-                            <li>2 Gece</li> 
-                        </ul>
-                        <p class="fiyat">Kişi Başı Ücret: 9.115₺ (3.Dalga)</p>
-                    </div>
-                    <div class="paket">
-                        <h3>SÜMER PALACE</h3>
-                        <ul>
-                            <li>3 Kişilik Oda</li>
-                            <li>2 Gece</li>
-                        </ul>
-                        <p class="fiyat">Kişi Başı Ücret: 8.705₺ (3.Dalga)</p>
-                    </div>
-                    <div class="paket">
-                        <h3>BANDIRMA</h3>
-                        <ul>
-                            <li>2 Kişilik Oda</li>
-                            <li>1 Gece</li> 
-                        </ul>
-                        <p class="fiyat">Kişi Başı Ücret: 6.315₺ (3.Dalga)</p>
-                    </div>
-                    <div class="paket">
-                        <h3>BEYOĞLU</h3>
-                        <ul>
-                            <li>1 Kişilik Oda</li>
-                            <li>1 Gece</li> 
-                        </ul>
-                        <p class="fiyat">Kişi Başı Ücret: 7.995₺ (3.Dalga)</p>
-                    </div>
-                    <div class="paket">
-                        <h3>DOLMABAHÇE</h3>
-                        <ul>
-                            <li>3 Kişilik Oda</li>
-                            <li>1 Gece</li>
-                        </ul>
-                        <p class="fiyat">Kişi Başı Ücret: 6.175₺ (3.Dalga)</p>
-                    </div>
-                    <div class="paket">
-                        <h3>Konaklamasız Katılım</h3>
-                        <ul>
-                            <li>1 Günlük</li>
-                        </ul>
-                        <p class="fiyat">Kişi Başı Ücret: 5.260₺ (3.Dalga)</p>
-                    </div>
-                    <div class="paket">
-                        <h3>Konaklamasız Katılım</h3>
-                        <ul>
-                            <li>2 Günlük</li>
-                        </ul>
-                        <p class="fiyat">Kişi Başı Ücret: 8.335₺ (3.Dalga)</p>
-                    </div>
-                    <div class="paket">
-                        <h3>GALA Katılım</h3>
-                        <ul>
-                            <li>Sadece Galaya Katılım.</li>
-                        </ul>
-                        <p class="fiyat">Kişi Başı Ücret: 3.425₺ (3.Dalga)</p>
-                    </div>
-                </div>
+      <section class="paketlerimiz">
+        <div class="container">
+          <h2>Paketlerimiz</h2>
+          <div class="paket-kutulari">
+            <div class="paket">
+              <h3>ANKARA PALACE</h3>
+              <ul>
+                <li>1 Kişilik Oda</li>
+                <li>2 Gece</li>
+              </ul>
+              <p class="fiyat">Kişi Başı Ücret: 12.475₺ (3.Dalga)</p>
             </div>
-        </section> 
+            <div class="paket">
+              <h3>PERA PALACE</h3>
+              <ul>
+                <li>2 Kişilik Oda</li>
+                <li>2 Gece</li>
+              </ul>
+              <p class="fiyat">Kişi Başı Ücret: 9.115₺ (3.Dalga)</p>
+            </div>
+            <div class="paket">
+              <h3>SÜMER PALACE</h3>
+              <ul>
+                <li>3 Kişilik Oda</li>
+                <li>2 Gece</li>
+              </ul>
+              <p class="fiyat">Kişi Başı Ücret: 8.705₺ (3.Dalga)</p>
+            </div>
+            <div class="paket">
+              <h3>BANDIRMA</h3>
+              <ul>
+                <li>2 Kişilik Oda</li>
+                <li>1 Gece</li>
+              </ul>
+              <p class="fiyat">Kişi Başı Ücret: 6.315₺ (3.Dalga)</p>
+            </div>
+            <div class="paket">
+              <h3>BEYOĞLU</h3>
+              <ul>
+                <li>1 Kişilik Oda</li>
+                <li>1 Gece</li>
+              </ul>
+              <p class="fiyat">Kişi Başı Ücret: 7.995₺ (3.Dalga)</p>
+            </div>
+            <div class="paket">
+              <h3>DOLMABAHÇE</h3>
+              <ul>
+                <li>3 Kişilik Oda</li>
+                <li>1 Gece</li>
+              </ul>
+              <p class="fiyat">Kişi Başı Ücret: 6.175₺ (3.Dalga)</p>
+            </div>
+            <div class="paket">
+              <h3>Konaklamasız Katılım</h3>
+              <ul>
+                <li>1 Günlük</li>
+              </ul>
+              <p class="fiyat">Kişi Başı Ücret: 5.260₺ (3.Dalga)</p>
+            </div>
+            <div class="paket">
+              <h3>Konaklamasız Katılım</h3>
+              <ul>
+                <li>2 Günlük</li>
+              </ul>
+              <p class="fiyat">Kişi Başı Ücret: 8.335₺ (3.Dalga)</p>
+            </div>
+            <div class="paket">
+              <h3>GALA Katılım</h3>
+              <ul>
+                <li>Sadece Galaya Katılım.</li>
+              </ul>
+              <p class="fiyat">Kişi Başı Ücret: 3.425₺ (3.Dalga)</p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer>
       <div class="sosyal-medya">
-        <a href="https://www.instagram.com/1923cumhuriyetkonferansi"><i class="fab fa-instagram"></i></a>
-        <a href="mailto:35.konferans@gmail.com"><i class="fa-solid fa-envelope"></i></a>
+        <a href="https://www.instagram.com/1923cumhuriyetkonferansi"
+          ><i class="fab fa-instagram"></i
+        ></a>
+        <a href="mailto:35.konferans@gmail.com"
+          ><i class="fa-solid fa-envelope"></i
+        ></a>
       </div>
       <p class="telif-hakkı">© 2024 Demir Bülbüloğlu - Tüm Hakları Saklıdır.</p>
     </footer>
-</body>
+  </body>
 </html>
